2006-12-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* Update: doc/Modules/*
	  kahua.config.ja, kahua.server.ja

2006-12-25  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: src/kahua-install.scm
	  Add New material-type as "template",which is
	  for install XML kahua template files.
	* Fix: skel/Makefile.in
	  fix bug at kahua-package generate project's test.
	  and fix proj-start,proj-stop install directory.
	* Change: skel/proj/default.kahua
	  change db path and delete kahua-check-transaction!.
	* Change: skel/proj/page.kahua
	  modify http-equiv's value.
	* Fix: skel/test/test.scm.in
	  catch up current Kahua and pass skelton project's test.
	* Add: skel/test/test.conf.in
	  catch up current Kahua and pass skelton project's test.
	* Change: src/kahua-package.scm
	  catch up current Kahua's skelton.
	
2006-12-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* New: doc/SiteBundle.ja
	  New document.

	* New: doc/AboutKahua.ja
	  New document.

	* New: doc/Concepts/Servers
	  New document.

2006-12-22  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: INSTALL
	  Description of "Site-Bundle".

	* Add: src/kahua/user.scm
	  New function kahua-user-add-role! and kahua-user-drop-role!,
	  and <kahua-user> has name-of(login-name), roles-of(role-alist)
	  accessor.

	* Add: src/kahua/server.scm
	  New function kahua-login and kahua-logout for convenience.
	  Usage: (kahua-login user-name password)
	         (kahua-logout)

2006-12-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/server.scm
	  New function kahua-authorized? for convenience.
	  Usage: (kahua-authorized?) or (kahua-authorized? role1 role2 ...)

2006-12-19  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/xml-template.scm
	  Now can handle partial XML template. Its character encoding
	  must be UTF-8 and must not have XML declaration.

	* Fix: src/kahua/xml-template.scm
	  Use sxml:attr to get id attribute, and drop id-table slot
	  in <kahua:xml-template>.

2006-12-18  Tatsuya BIZENN  <bizenn@arthub.net>