@@ -1,5 +1,8 @@
 2006-12-26  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Change: src/kahua/elem.scm
+	  Export define-basic-element and define-elements.
+
 	* Update: doc/Modules/*
 	  kahua.config.ja, kahua.server.ja
 
